# spord-tracker

./: .gitignore  Cargo.toml  example-config.json
src/: cli.rs  config.rs  constants.rs  logging.rs  main.rs
src/common/: mod.rs
src/sql/: mod.rs  models.rs
src/web/: files.rs  html.rs  mod.rs  template.rs  user.rs
web/html/: header.html  index.html  login.html  spords.html
web/js/: login.js
