[package]
name = "spord-tracker"
version = "0.1.0"
edition = "2021"
authors = ["Madelyn Seal <winterberry42@protonmail.com>"]
license = "GPL-2.0"

[dependencies]
actix-web={version="4.0"}
actix-identity="0.8"
actix-session={version="0.10", features=["cookie-session"]}

log="0.4"
flexi_logger="0.29"

serde="1.0"
serde_derive="1.0"
serde_json="1.0"

anyhow="1"
thiserror="2"
lazy_static="1"

clap={version ="4", features = ["cargo"]}

bcrypt="0.16"
rpassword="7"
rust-embed="8.5"
chrono={version="0.4", features=["serde"]}

async-sqlite="0.3"

handlebars="6"
#windows-service="0.7"